--- a/PruebasHIPO.ipynb
+++ b/PruebasHIPO.ipynb
@@ -151,7 +151,7 @@
         "plt.xticks(rotation=70)\n",
         "hours = mdates.DateFormatter('%H:%M')\n",
         "ax.xaxis.set_major_formatter(hours)\n",
-        "ax.plot(x1,y1,'r')"
+        "ax.plot(x1, y1, 'r')"
       ]
     },
     {
@@ -209,8 +209,8 @@
         "plt.xticks(rotation=70)\n",
         "hours = mdates.DateFormatter('%H:%M')\n",
         "ax.xaxis.set_major_formatter(hours)\n",
-        "plt.plot(x1,y1,'r',x2,y2,'r',x3,y3,'r')\n",
-        "plt.plot(x4,y4,'g',x5,y5,'g',x6,y6,'g')"
+        "plt.plot(x1, y1, 'r', x2, y2, 'r', x3, y3, 'r')\n",
+        "plt.plot(x4, y4, 'g', x5, y5, 'g', x6, y6, 'g')"
       ]
     },
     {
@@ -246,39 +246,39 @@
       ],
       "source": [
         "dist = [df_ravenna['dist'][0],\n",
-        " df_cesena['dist'][0],\n",
-        " df_faenza['dist'][0],\n",
-        " df_ferrara['dist'][0],\n",
-        " df_bologna['dist'][0],\n",
-        " df_mantova['dist'][0],\n",
-        " df_piacenza['dist'][0],\n",
-        " df_milano['dist'][0],\n",
-        " df_asti['dist'][0],\n",
-        " df_torino['dist'][0]\n",
-        "]\n",
+        "        df_cesena['dist'][0],\n",
+        "        df_faenza['dist'][0],\n",
+        "        df_ferrara['dist'][0],\n",
+        "        df_bologna['dist'][0],\n",
+        "        df_mantova['dist'][0],\n",
+        "        df_piacenza['dist'][0],\n",
+        "        df_milano['dist'][0],\n",
+        "        df_asti['dist'][0],\n",
+        "        df_torino['dist'][0]\n",
+        "        ]\n",
         "temp_max = [df_ravenna['temp'].max(),\n",
-        " df_cesena['temp'].max(),\n",
-        " df_faenza['temp'].max(),\n",
-        " df_ferrara['temp'].max(),\n",
-        " df_bologna['temp'].max(),\n",
-        " df_mantova['temp'].max(),\n",
-        " df_piacenza['temp'].max(),\n",
-        " df_milano['temp'].max(),\n",
-        " df_asti['temp'].max(),\n",
-        " df_torino['temp'].max()\n",
-        "]\n",
+        "            df_cesena['temp'].max(),\n",
+        "            df_faenza['temp'].max(),\n",
+        "            df_ferrara['temp'].max(),\n",
+        "            df_bologna['temp'].max(),\n",
+        "            df_mantova['temp'].max(),\n",
+        "            df_piacenza['temp'].max(),\n",
+        "            df_milano['temp'].max(),\n",
+        "            df_asti['temp'].max(),\n",
+        "            df_torino['temp'].max()\n",
+        "            ]\n",
         "\n",
         "temp_min = [df_ravenna['temp'].min(),\n",
-        " df_cesena['temp'].min(),\n",
-        " df_faenza['temp'].min(),\n",
-        " df_ferrara['temp'].min(),\n",
-        " df_bologna['temp'].min(),\n",
-        " df_mantova['temp'].min(),\n",
-        " df_piacenza['temp'].min(),\n",
-        " df_milano['temp'].min(),\n",
-        " df_asti['temp'].min(),\n",
-        " df_torino['temp'].min()\n",
-        "]\n",
+        "            df_cesena['temp'].min(),\n",
+        "            df_faenza['temp'].min(),\n",
+        "            df_ferrara['temp'].min(),\n",
+        "            df_bologna['temp'].min(),\n",
+        "            df_mantova['temp'].min(),\n",
+        "            df_piacenza['temp'].min(),\n",
+        "            df_milano['temp'].min(),\n",
+        "            df_asti['temp'].min(),\n",
+        "            df_torino['temp'].min()\n",
+        "            ]\n",
         "\n",
         "print(f'Distancias: {dist}')\n",
         "print(f'Temeraturas máximas por ciudad: {temp_max}')\n",
@@ -373,21 +373,21 @@
         "svr_lin1 = SVR(kernel='linear', C=1e3)\n",
         "svr_lin2 = SVR(kernel='linear', C=1e3)\n",
         "# SVR.fit requiere que X sea un arreglo [,1]\n",
-        "x1 = np.array(dist[:4]).reshape(-1,1)\n",
+        "x1 = np.array(dist[:4]).reshape(-1, 1)\n",
         "y1 = np.array(temp_max[:4])\n",
         "\n",
-        "x2 = np.array(dist[4:]).reshape(-1,1)\n",
+        "x2 = np.array(dist[4:]).reshape(-1, 1)\n",
         "y2 = np.array(temp_max[4:])\n",
         "\n",
         "svr_lin1.fit(x1, y1)\n",
         "svr_lin2.fit(x2, y2)\n",
-        "xp1 = np.arange(10,100,10).reshape((9,1))\n",
-        "xp2 = np.arange(50,400,50).reshape((7,1))\n",
+        "xp1 = np.arange(10, 100, 10).reshape((9, 1))\n",
+        "xp2 = np.arange(50, 400, 50).reshape((7, 1))\n",
         "yp1 = svr_lin1.predict(xp1)\n",
         "yp2 = svr_lin2.predict(xp2)\n",
         "plt.plot(xp1, yp1, c='r', label='Strong sea effect')\n",
         "plt.plot(xp2, yp2, c='b', label='Light sea effect')\n",
-        "plt.axis((0,400,27,32))\n",
+        "plt.axis((0, 400, 27, 32))\n",
         "plt.scatter(dist, temp_max, c='k', label='data')"
       ]
     },
@@ -423,8 +423,8 @@
         }
       ],
       "source": [
-        "print (f'Vector 1 (rojo) a={svr_lin1.coef_} y b={svr_lin1.intercept_}')\n",
-        "print (f'Vector 2 (azul) a={svr_lin2.coef_} y b={svr_lin2.intercept_}')"
+        "print(f'Vector 1 (rojo) a={svr_lin1.coef_} y b={svr_lin1.intercept_}')\n",
+        "print(f'Vector 2 (azul) a={svr_lin2.coef_} y b={svr_lin2.intercept_}')"
       ]
     },
     {
@@ -482,24 +482,27 @@
       ],
       "source": [
         "def line1(x):\n",
-        " a1 = -svr_lin1.coef_[0][0]\n",
-        " b1 = svr_lin1.intercept_[0]\n",
-        " return -a1*x + b1\n",
+        "    a1 = -svr_lin1.coef_[0][0]\n",
+        "    b1 = svr_lin1.intercept_[0]\n",
+        "    return -a1*x + b1\n",
+        "\n",
         "\n",
         "def line2(x):\n",
-        " a1 = -svr_lin2.coef_[0][0]\n",
-        " b1 = svr_lin2.intercept_[0]\n",
-        " return -a1*x + b1\n",
+        "    a1 = -svr_lin2.coef_[0][0]\n",
+        "    b1 = svr_lin2.intercept_[0]\n",
+        "    return -a1*x + b1\n",
         "\n",
-        "def findIntersection(fun1,fun2,x0):\n",
-        " return fsolve(lambda x : fun1(x) - fun2(x),x0)\n",
         "\n",
-        "result = findIntersection(line1,line2,0.0)\n",
+        "def findIntersection(fun1, fun2, x0):\n",
+        "    return fsolve(lambda x: fun1(x) - fun2(x), x0)\n",
         "\n",
-        "print (\"[x,y] = [ %d , %d ]\" % (result,line1(result)))\n",
-        "print('El efecto del mar para la temperatura máxima desaparece a los %d km' %result)\n",
-        "x = np.linspace(0,300,31)\n",
-        "plt.plot(x,line1(x),x,line2(x),result,line1(result),'ro')"
+        "\n",
+        "result = findIntersection(line1, line2, 0.0)\n",
+        "\n",
+        "print(\"[x,y] = [ %d , %d ]\" % (result, line1(result)))\n",
+        "print('El efecto del mar para la temperatura máxima desaparece a los %d km' % result)\n",
+        "x = np.linspace(0, 300, 31)\n",
+        "plt.plot(x, line1(x), x, line2(x), result, line1(result), 'ro')"
       ]
     },
     {
@@ -554,8 +557,8 @@
         }
       ],
       "source": [
-        "plt.axis((0,400,15,25))\n",
-        "plt.plot(dist,temp_min,'bo')"
+        "plt.axis((0, 400, 15, 25))\n",
+        "plt.plot(dist, temp_min, 'bo')"
       ]
     },
     {
@@ -619,8 +622,8 @@
         "plt.xticks(rotation=70)\n",
         "hours = mdates.DateFormatter('%H:%M')\n",
         "ax.xaxis.set_major_formatter(hours)\n",
-        "plt.plot(x1,y1,'r',x2,y2,'r',x3,y3,'r')\n",
-        "plt.plot(x4,y4,'g',x5,y5,'g',x6,y6,'g')"
+        "plt.plot(x1, y1, 'r', x2, y2, 'r', x3, y3, 'r')\n",
+        "plt.plot(x4, y4, 'g', x5, y5, 'g', x6, y6, 'g')"
       ]
     },
     {
@@ -659,17 +662,17 @@
       "source": [
         "# humedad máxima\n",
         "hum_max = [df_ravenna['humidity'].max(),\n",
-        " df_cesena['humidity'].max(),\n",
-        " df_faenza['humidity'].max(),\n",
-        " df_ferrara['humidity'].max(),\n",
-        " df_bologna['humidity'].max(),\n",
-        " df_mantova['humidity'].max(),\n",
-        " df_piacenza['humidity'].max(),\n",
-        " df_milano['humidity'].max(),\n",
-        " df_asti['humidity'].max(),\n",
-        " df_torino['humidity'].max()\n",
-        "]\n",
-        "plt.plot(dist,hum_max,'bo')"
+        "           df_cesena['humidity'].max(),\n",
+        "           df_faenza['humidity'].max(),\n",
+        "           df_ferrara['humidity'].max(),\n",
+        "           df_bologna['humidity'].max(),\n",
+        "           df_mantova['humidity'].max(),\n",
+        "           df_piacenza['humidity'].max(),\n",
+        "           df_milano['humidity'].max(),\n",
+        "           df_asti['humidity'].max(),\n",
+        "           df_torino['humidity'].max()\n",
+        "           ]\n",
+        "plt.plot(dist, hum_max, 'bo')"
       ]
     },
     {
@@ -728,7 +731,7 @@
       ],
       "source": [
         "# ejemplo de plot para observar una relación entre dirección y velocidad\n",
-        "plt.plot(df_ravenna['wind_deg'],df_ravenna['wind_speed'],'ro')"
+        "plt.plot(df_ravenna['wind_deg'], df_ravenna['wind_speed'], 'ro')"
       ]
     },
     {
@@ -753,9 +756,9 @@
       ],
       "source": [
         "# crear el histograma sobre los 360 grados, divididos en 45°\n",
-        "hist, bins = np.histogram(df_ravenna['wind_deg'],8,[0,360])\n",
-        "print (hist)\n",
-        "print (bins)"
+        "hist, bins = np.histogram(df_ravenna['wind_deg'], 8, [0, 360])\n",
+        "print(hist)\n",
+        "print(bins)"
       ]
     },
     {
@@ -766,14 +769,14 @@
       },
       "outputs": [],
       "source": [
-        "def showRoseWind(values,city_name,max_value):\n",
-        " N = 8\n",
-        " theta = np.arange(0.,2 * np.pi, 2 * np.pi / N)\n",
-        " radii = np.array(values)\n",
-        " plt.axes([0.025, 0.025, 0.95, 0.95], polar=True)\n",
-        " colors = [(1-x/max_value, 1-x/max_value, 0.75) for x in radii]\n",
-        " plt.bar(theta, radii, width=(2*np.pi/N), bottom=0.0, color=colors)\n",
-        " plt.title(city_name,x=0.2, fontsize=20)"
+        "def showRoseWind(values, city_name, max_value):\n",
+        "    N = 8\n",
+        "    theta = np.arange(0., 2 * np.pi, 2 * np.pi / N)\n",
+        "    radii = np.array(values)\n",
+        "    plt.axes([0.025, 0.025, 0.95, 0.95], polar=True)\n",
+        "    colors = [(1-x/max_value, 1-x/max_value, 0.75) for x in radii]\n",
+        "    plt.bar(theta, radii, width=(2*np.pi/N), bottom=0.0, color=colors)\n",
+        "    plt.title(city_name, x=0.2, fontsize=20)"
       ]
     },
     {
@@ -795,7 +798,7 @@
         }
       ],
       "source": [
-        "showRoseWind(hist,'Ravenna',max(hist))"
+        "showRoseWind(hist, 'Ravenna', max(hist))"
       ]
     },
     {
@@ -834,72 +837,81 @@
       "source": [
         "\n",
         "N = 8\n",
-        "theta = np.arange(0.,2 * np.pi, 2 * np.pi / N)\n",
+        "theta = np.arange(0., 2 * np.pi, 2 * np.pi / N)\n",
         "radii = np.array(hist)\n",
         "\n",
         "\n",
         "fig, axes = plt.subplots(2, 5, subplot_kw=dict(polar=True), figsize=(25, 10))\n",
         "\n",
-        "hist, bins = np.histogram(df_torino['wind_deg'],8,[0,360])\n",
+        "hist, bins = np.histogram(df_torino['wind_deg'], 8, [0, 360])\n",
         "max_value = max(hist)\n",
         "colors = [(1-x/max_value, 1-x/max_value, 0.75) for x in np.array(hist)]\n",
-        "axes[0, 0].bar(theta, np.array(hist), width=(2*np.pi/N), bottom=0.0, color=colors)\n",
+        "axes[0, 0].bar(theta, np.array(hist), width=(\n",
+        "    2*np.pi/N), bottom=0.0, color=colors)\n",
         "axes[0, 0].set(title='Torino')\n",
         "\n",
-        "hist, bins = np.histogram(df_cesena['wind_deg'],8,[0,360])\n",
+        "hist, bins = np.histogram(df_cesena['wind_deg'], 8, [0, 360])\n",
         "max_value = max(hist)\n",
         "colors = [(1-x/max_value, 1-x/max_value, 0.75) for x in np.array(hist)]\n",
-        "axes[0, 1].bar(theta, np.array(hist), width=(2*np.pi/N), bottom=0.0, color=colors)\n",
+        "axes[0, 1].bar(theta, np.array(hist), width=(\n",
+        "    2*np.pi/N), bottom=0.0, color=colors)\n",
         "axes[0, 1].set(title='Cesena')\n",
         "\n",
-        "hist, bins = np.histogram(df_faenza['wind_deg'],8,[0,360])\n",
+        "hist, bins = np.histogram(df_faenza['wind_deg'], 8, [0, 360])\n",
         "max_value = max(hist)\n",
         "colors = [(1-x/max_value, 1-x/max_value, 0.75) for x in np.array(hist)]\n",
-        "axes[0, 2].bar(theta, np.array(hist), width=(2*np.pi/N), bottom=0.0, color=colors)\n",
+        "axes[0, 2].bar(theta, np.array(hist), width=(\n",
+        "    2*np.pi/N), bottom=0.0, color=colors)\n",
         "axes[0, 2].set(title='Faenza')\n",
         "\n",
-        "hist, bins = np.histogram(df_ferrara['wind_deg'],8,[0,360])\n",
+        "hist, bins = np.histogram(df_ferrara['wind_deg'], 8, [0, 360])\n",
         "max_value = max(hist)\n",
         "colors = [(1-x/max_value, 1-x/max_value, 0.75) for x in np.array(hist)]\n",
-        "axes[0, 3].bar(theta, np.array(hist), width=(2*np.pi/N), bottom=0.0, color=colors)\n",
+        "axes[0, 3].bar(theta, np.array(hist), width=(\n",
+        "    2*np.pi/N), bottom=0.0, color=colors)\n",
         "axes[0, 3].set(title='Ferrara')\n",
         "\n",
-        "hist, bins = np.histogram(df_piacenza['wind_deg'],8,[0,360])\n",
+        "hist, bins = np.histogram(df_piacenza['wind_deg'], 8, [0, 360])\n",
         "max_value = max(hist)\n",
         "colors = [(1-x/max_value, 1-x/max_value, 0.75) for x in np.array(hist)]\n",
-        "axes[0, 4].bar(theta, np.array(hist), width=(2*np.pi/N), bottom=0.0, color=colors)\n",
+        "axes[0, 4].bar(theta, np.array(hist), width=(\n",
+        "    2*np.pi/N), bottom=0.0, color=colors)\n",
         "axes[0, 4].set(title='Piacenza')\n",
         "\n",
-        "hist, bins = np.histogram(df_mantova['wind_deg'],8,[0,360])\n",
+        "hist, bins = np.histogram(df_mantova['wind_deg'], 8, [0, 360])\n",
         "max_value = max(hist)\n",
         "colors = [(1-x/max_value, 1-x/max_value, 0.75) for x in np.array(hist)]\n",
-        "axes[1, 0].bar(theta, np.array(hist), width=(2*np.pi/N), bottom=0.0, color=colors)\n",
+        "axes[1, 0].bar(theta, np.array(hist), width=(\n",
+        "    2*np.pi/N), bottom=0.0, color=colors)\n",
         "axes[1, 0].set(title='Mantova')\n",
         "\n",
-        "hist, bins = np.histogram(df_bologna['wind_deg'],8,[0,360])\n",
+        "hist, bins = np.histogram(df_bologna['wind_deg'], 8, [0, 360])\n",
         "max_value = max(hist)\n",
         "colors = [(1-x/max_value, 1-x/max_value, 0.75) for x in np.array(hist)]\n",
-        "axes[1, 1].bar(theta, np.array(hist), width=(2*np.pi/N), bottom=0.0, color=colors)\n",
+        "axes[1, 1].bar(theta, np.array(hist), width=(\n",
+        "    2*np.pi/N), bottom=0.0, color=colors)\n",
         "axes[1, 1].set(title='Bologna')\n",
         "\n",
-        "hist, bins = np.histogram(df_asti['wind_deg'],8,[0,360])\n",
+        "hist, bins = np.histogram(df_asti['wind_deg'], 8, [0, 360])\n",
         "max_value = max(hist)\n",
         "colors = [(1-x/max_value, 1-x/max_value, 0.75) for x in np.array(hist)]\n",
-        "axes[1, 2].bar(theta, np.array(hist), width=(2*np.pi/N), bottom=0.0, color=colors)\n",
+        "axes[1, 2].bar(theta, np.array(hist), width=(\n",
+        "    2*np.pi/N), bottom=0.0, color=colors)\n",
         "axes[1, 2].set(title='Asti')\n",
         "\n",
-        "hist, bins = np.histogram(df_milano['wind_deg'],8,[0,360])\n",
+        "hist, bins = np.histogram(df_milano['wind_deg'], 8, [0, 360])\n",
         "max_value = max(hist)\n",
         "colors = [(1-x/max_value, 1-x/max_value, 0.75) for x in np.array(hist)]\n",
-        "axes[1, 3].bar(theta, np.array(hist), width=(2*np.pi/N), bottom=0.0, color=colors)\n",
+        "axes[1, 3].bar(theta, np.array(hist), width=(\n",
+        "    2*np.pi/N), bottom=0.0, color=colors)\n",
         "axes[1, 3].set(title='Milano')\n",
         "\n",
-        "hist, bins = np.histogram(df_ravenna['wind_deg'],8,[0,360])\n",
+        "hist, bins = np.histogram(df_ravenna['wind_deg'], 8, [0, 360])\n",
         "max_value = max(hist)\n",
         "colors = [(1-x/max_value, 1-x/max_value, 0.75) for x in np.array(hist)]\n",
-        "axes[1, 4].bar(theta, np.array(hist), width=(2*np.pi/N), bottom=0.0, color=colors)\n",
-        "axes[1, 4].set(title='Ravenna')\n",
-        "\n"
+        "axes[1, 4].bar(theta, np.array(hist), width=(\n",
+        "    2*np.pi/N), bottom=0.0, color=colors)\n",
+        "axes[1, 4].set(title='Ravenna')"
       ]
     },
     {
