--- a/PruebasHIPO.ipynb
+++ b/PruebasHIPO.ipynb
@@ -126,7 +126,7 @@
         {
           "data": {
             "text/plain": [
-              "[<matplotlib.lines.Line2D at 0x1fa57206ed0>]"
+              "[<matplotlib.lines.Line2D at 0x1e938ca2b40>]"
             ]
           },
           "execution_count": 4,
@@ -169,9 +169,9 @@
         {
           "data": {
             "text/plain": [
-              "[<matplotlib.lines.Line2D at 0x1fa633d2360>,\n",
-              " <matplotlib.lines.Line2D at 0x1fa633d2330>,\n",
-              " <matplotlib.lines.Line2D at 0x1fa633d2390>]"
+              "[<matplotlib.lines.Line2D at 0x1e938d79a60>,\n",
+              " <matplotlib.lines.Line2D at 0x1e938d79a30>,\n",
+              " <matplotlib.lines.Line2D at 0x1e938d79a90>]"
             ]
           },
           "execution_count": 5,
@@ -351,7 +351,7 @@
         {
           "data": {
             "text/plain": [
-              "<matplotlib.collections.PathCollection at 0x1fa634abe00>"
+              "<matplotlib.collections.PathCollection at 0x1e93ade45f0>"
             ]
           },
           "execution_count": 8,
@@ -451,18 +451,18 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\josea\\AppData\\Local\\Temp\\ipykernel_14036\\540864633.py:16: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
-            "  print (\"[x,y] = [ %d , %d ]\" % (result,line1(result)))\n",
-            "C:\\Users\\josea\\AppData\\Local\\Temp\\ipykernel_14036\\540864633.py:17: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
-            "  print('El efecto del mar para la temperatura máxima desaparece a los %d km' %result)\n"
+            "C:\\Users\\josea\\AppData\\Local\\Temp\\ipykernel_14080\\3505394043.py:19: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+            "  print(\"[x,y] = [ %d , %d ]\" % (result, line1(result)))\n",
+            "C:\\Users\\josea\\AppData\\Local\\Temp\\ipykernel_14080\\3505394043.py:20: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+            "  print('El efecto del mar para la temperatura máxima desaparece a los %d km' % result)\n"
           ]
         },
         {
           "data": {
             "text/plain": [
-              "[<matplotlib.lines.Line2D at 0x1fa634706e0>,\n",
-              " <matplotlib.lines.Line2D at 0x1fa634706b0>,\n",
-              " <matplotlib.lines.Line2D at 0x1fa6340c9b0>]"
+              "[<matplotlib.lines.Line2D at 0x1e93afe05f0>,\n",
+              " <matplotlib.lines.Line2D at 0x1e93afe0860>,\n",
+              " <matplotlib.lines.Line2D at 0x1e93afe09e0>]"
             ]
           },
           "execution_count": 10,
@@ -538,7 +538,7 @@
         {
           "data": {
             "text/plain": [
-              "[<matplotlib.lines.Line2D at 0x1fa63554560>]"
+              "[<matplotlib.lines.Line2D at 0x1e93b038d70>]"
             ]
           },
           "execution_count": 11,
@@ -585,9 +585,9 @@
         {
           "data": {
             "text/plain": [
-              "[<matplotlib.lines.Line2D at 0x1fa63609a30>,\n",
-              " <matplotlib.lines.Line2D at 0x1fa63609a00>,\n",
-              " <matplotlib.lines.Line2D at 0x1fa63609a60>]"
+              "[<matplotlib.lines.Line2D at 0x1e93b0ad7f0>,\n",
+              " <matplotlib.lines.Line2D at 0x1e93b0addc0>,\n",
+              " <matplotlib.lines.Line2D at 0x1e93b0ad8b0>]"
             ]
           },
           "execution_count": 12,
@@ -641,7 +641,7 @@
         {
           "data": {
             "text/plain": [
-              "[<matplotlib.lines.Line2D at 0x1fa63657ec0>]"
+              "[<matplotlib.lines.Line2D at 0x1e93b134380>]"
             ]
           },
           "execution_count": 13,
@@ -711,7 +711,7 @@
         {
           "data": {
             "text/plain": [
-              "[<matplotlib.lines.Line2D at 0x1fa6362ab10>]"
+              "[<matplotlib.lines.Line2D at 0x1e93b18c830>]"
             ]
           },
           "execution_count": 14,
@@ -835,7 +835,6 @@
         }
       ],
       "source": [
-        "\n",
         "N = 8\n",
         "theta = np.arange(0., 2 * np.pi, 2 * np.pi / N)\n",
         "radii = np.array(hist)\n",
